# NoteSquirrel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: app_frame.rs  config.rs  editor.rs  file_manager.rs  find_replace.rs  icon.rs  main.rs  notes_list.rs  rendered_view.rs
