[package]
name = "NoteSquirrel"
version = "0.1.1"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
pulldown-cmark = "0.12"
syntect = "5.2"
arboard = "3.4"
webbrowser = "1.0"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.10"

[build-dependencies]
image = "0.25"
ico = "0.3"
icns = "0.3"
